# everydayecho

./: .replit  NOTICE  Pasted--html-head-base-href-meta-charset-UTF-8-meta-name-viewport-content-width-device-wid-1732604597993.txt  README.md  app.py  models.py  package-lock.json  package.json  pyproject.toml  replit_zip_error_log.txt  server.js
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.cache/typescript/5.5/: package-lock.json  package.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
middleware/: auth.js
migrations/versions/: 3d8f2384c936_remove_admin_user_entries.py  8cae5609ee40_add_user_id_column_to_journal_entry_.py  remove_all_journal_entries.py  update_plan_history.py
models/: JournalEntry.js  User.js
routes/: auth.js  entries.js
static/css/: custom.css
static/js/: chrome-ai.js  journal.js
templates/: base.html  index.html  login.html  past_entries.html  register.html  terms.html
