[project]
name = "repl-nix-dailyjournalreflections"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "werkzeug>=3.0.1",
]
